syntax = "proto3";

package chat;

option go_package="grpcTest/internal/chat";

service Chat {
  rpc SendMessage(stream ChatMessage) returns(stream ChatMessage) {}
}

message ChatMessage {
  string username = 1;
  string messageBody = 2;
  Status status = 3;
}

message Status {
  string message = 1;
  bool isSuccess = 2;
}